themes/lithiumx/static/static/css/main.css
/*
TODO: resolve organisation & consistency details between desktop & mobile resolution
See https://www.w3.org/TR/css-fonts-4/#ui-sans-serif-def and others like
system-ui-serif & system-ui-monospace in https://github.com/w3c/csswg-drafts/issues/4107
*/
html,
body {
  margin: 0;
  padding: 0;
  position: relative;
}

body {
  font-size: 1em;
  font-family: system-ui,
              ui-sans-serif,
              -apple-system,
              BlinkMacSystemFont,
              "Helvetica Neue",
              "Segoe UI",
              Roboto,
              Oxygen,
              Ubuntu,
              Cantarell,
              "Fira Sans",
              "Droid Sans",
              "Segoe UI Emoji",
              "Segoe UI Symbol",
              sans-serif;
  line-height: 1.6em;
  vertical-align: baseline;
  text-rendering: optimizeLegibility;
  font-feature-settings: "liga" on;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -moz-font-feature-settings: "liga" on;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: /* 'Crimson Text', */
                'Helvetica Neue',
                'Playfair Display',
                'Garamond',
                system-ui-serif,
                ui-serif,
                -apple-system-ui-serif,
                serif;
  font-kerning: normal;
  line-height: 1em;
  letter-spacing: normal;
  /* margin: 2em auto 1.3em auto; */
  color: rgba(0,0,0,.76);
}

h2 {
  margin-top: 1.5rem;
}

h4 {
  position: relative;
  font-size: 1.55em;
  font-style: italic;
  padding: 0.5em, 1em, 1em 1em;
  text-align: right;
  color: #555;
}

h4::before {
  content: " “ ";
  font-size: 2em;
  font-weight: 700;
  color: #ccc;
  margin: 1em 0.66em 1em 0em;
}

h4::after {
  content: " ” ";
  font-size: 2em;
  font-weight: 700;
  color: #ccc;
  position: relative;
  top: 0.8em;
  margin: 1em 0em 1.3em 0.66em;
}

h5 {
  margin: 1.25em auto;
  font-size: 1.2em;
  font-weight: 700;
}

a {
  outline: none;
}

a:hover {
  background-color: #fff100;
}

b, strong {
  font-weight: 600;
  color: #222;
}

pre {
  /* margin: 1.5em auto; */
  display: block;
  overflow: auto;
  background-color: rgba(0,0,0,.03);  /* old was background-color: #f6f6f6; */
  /* border: 1px solid #eaeaea; */
  /* white-space: pre-wrap; */        /* css-3 */
  /* white-space: -moz-pre-wrap; */   /* Mozilla, since 1999 */
  /* white-space: -pre-wrap; */       /* Opera 4-6 */
  /* white-space: -o-pre-wrap; */     /* Opera 7 */
  /* word-wrap: break-word; */        /* Internet Explorer 5.5+ */
}

code {
  /* margin: 0.2em; */
  /* padding: 0 0.3em; */
  font-size: 0.85em;
  background-color: #f9fefe;
}

pre, code, pre > code {
  font-family: ui-monospace, system-ui-monospace, monospace;
  background-color: transparent;
}

pre > code {
  display: block;
  margin: 1em;
  padding: 1.5em;
  color: #000;
  background-color: transparent;
}

.highlight pre {
  padding: 1.2em;
  border-radius: 3px;
}

blockquote code, .highlight pre code {
  background-color: unset;
}

sup {
  margin: 0;
  padding: 0 0.3em 0 0.1em;
  font-size: 0.8em;
  line-height: 0.5em;
}

img {
  max-width: 100%;
  height: auto;
  box-shadow: 0px 3px 25px 2px #fcfcfc;
}

ul {
  margin: 0.6em auto;
  padding: 0 0 0 0.8em;
}

ol {
  margin: 0em auto 1em auto;
  padding: 0.5em 0 1em 0.8em;
}

li {
  margin: 0.25em;
  padding: 0 0 0 0.3em;
}

ol > li {
  margin: 0em 0em 1.5em 0em;
  padding: 0 0 0 0.3em;
}

ul > li {
  margin: 0em;
  padding: 0 0 0 0.3em;
}
/*
li::marker {
  margin-left: -1.3em;
  padding-right: 2em;
}*/

blockquote {
  margin: 0em auto;
  padding: 1.2em 1.8em;
  background-color: #fff999;
}

.wrapper {
  overflow: auto;
  position: relative;
}

.content {
  max-width: 680px;
  margin: 3em auto 4.8em auto;
  padding: 0 2em;
  color: rgba(0,0,0,.72);
}

.header {
  padding: 1em 0em 0.3em 0em;
  position: relative;
}

.nav {
  min-width: 320px;
  padding: 0 1em;
  margin: 1em auto 0 auto;
  font-family: ui-monospace, system-ui-monospace, monospace;
  text-align: center;
  /*border: 1px solid #eaeaea;*/
}

.nav-logo {
  margin: 0;
  padding: 0;
  position: relative;
  float: left;
  color: #444;
  text-align: left;
  /*border: 1px solid #eaeaea;*/
  transition: transform 150ms ease-out;
}

.nav-logo:hover
.nav-links a:focus {
  color: #000;
}

.nav-logo img {
  display: block;
  max-height: 40px;
  width: auto;
}

.nav-links {
  width: 100%;
  margin: 0;
  padding: 0;
  list-style: none;
  text-align: right;
}
/*
ul.nav-links {
  margin: 0;
  padding: 0;
  display: flex;
  direction: column;
}
*/
.nav-links li {
  display: inline-block;
  margin: 0 auto;
  /*text-align: right;*/
}

.nav-links li:first-child {
  margin-left: 2em;
}

.nav-links li:last-child {
  margin-right: 2em;
}

.nav-links a {
  color: rgba(0,0,0,.6);
  text-decoration: none;
  /*transition: color 150ms ease;*/
  font-size: 0.75em;
  text-align: right;

}

.nav-links a:focus,
.nav-links a:hover {
  color: #000;
}

.article-title {
  margin: 1.6em 0 auto 0;
}

.article-date {
  font-size: 0.75em;
/*   text-transform: uppercase; */
}

.article-duration {
  margin-top: 12px;
  float: right;
  font-size: 1em;
  font-family: ui-monospace, system-ui-monospace, monospace;
  padding: 1px 1em;
  font-weight: bold;
  border-radius: 3px;
  background-color: rgba(0,0,0,.155);
  color: #fefefe;
}

.article-tags {
  color: #ccc;
  font-size: 1em;
  font-family: ui-monospace, system-ui-monospace, monospace;
  font-weight: 300;
  list-style: none;
  padding: 5px 0;
  margin: 0 0.5em 0 auto;
  display: inline-block;
}

.article-tags li {
  display: inline-block;
  margin: 0;
  padding: 0;
}

.article-tags a {
  text-decoration: none;
  font-size: 0.75em;
  color: rgba(0,0,0,.6);
}

.article-tags li::after {
  content: ",";
  color: rgba(0,0,0,.75);
}

.article-tags li:first-child::before {
  content: "⠀ ";
  width: 2em;
  margin-left: 1.2em;
  padding-right: 0.24em;
  background-image: url('/static/img/tag.png');
  background-repeat: no-repeat;
  background-position: 0 -2px;
  background-clip: border-box;
  background-color: transparent;

}

.article-tags li:last-child::after {
  display: none;
}

.article-tags a:focus,
.article-tags a:hover {
  color: #000;
}


.article-content {
  margin: 1.5em 0 0 0;
}

.article-content p {
  margin: 0 0 1.5em 0;
}

.article-content a {
  text-decoration: underline;
  color: inherit;
  background: transparent;
  transition: background 150ms ease;
}

.article-content a:hover,
.article-content a:focus {
  background-color: #fff100;
}

.article-content li::marker {
  color: rgba(0,0,0,.6);
}

.article-content hr {
  margin: 14x auto;
  height: 1px;
  overflow: hidden;
  border: none;
  background: #e5e5e5;
}
/*
.highlight {
  position: relative;
  margin: 40px 0;
  font-size: 14px;
}

.highlight pre {
  padding: 10px;
}*/

a.footnote-ref {
  font-weight: bold;
  color: #167cd5;
  background: transparent;
  border-bottom-color: #167cd5;
  transition: background 150ms ease;
}

.archive {
  margin: 0;
  padding: 0;
  list-style: none;
  line-height: 1.5em;
  text-align: center;
  /*color: #111;*/
}

.archive-title {
  font-family: /* 'Crimson Text', */
                'Helvetica Neue',
                'Playfair Display',
                'Garamond',
                system-ui-serif,
                ui-serif,
                -apple-system-ui-serif,
                serif;
  font-weight: bolder;
  display: block;
  margin: 2em auto 0.8em -0.8em;
  color: rgba(0,0,0,.25);
}

.archive-item {
  margin: 0.65em auto 0 auto;
  padding: 0;
  display: block;
}

.archive-item-date {
  font-family: system-ui,
              ui-sans-serif,
              -apple-system,
              BlinkMacSystemFont,
              "Helvetica Neue",
              "Segoe UI",
              Roboto,
              Oxygen,
              Ubuntu,
              Cantarell,
              "Fira Sans",
              "Droid Sans",
              "Segoe UI Emoji",
              "Segoe UI Symbol",
              sans-serif;
  font-size: 1.2em;
  font-style: oblique;
  padding: 5px 0;
  margin: auto 0.5em auto 0;
  display: block;
  /* text-align: left;
  float: left; */
  color: rgba(0,0,0,.25);
}

.archive-item-link {
  display: inline-block;
  text-decoration: none;
  font-size: 1.4em;
  font-family: system-ui,
              ui-sans-serif,
              -apple-system,
              BlinkMacSystemFont,
              "Helvetica Neue",
              "Segoe UI",
              Roboto,
              Oxygen,
              Ubuntu,
              Cantarell,
              "Fira Sans",
              "Droid Sans",
              "Segoe UI Emoji",
              "Segoe UI Symbol",
              sans-serif;
  font-weight: bold;
  color: rgba(0,0,0,.76);
  padding: 5px 0 0 0;
}

.archive-item-link:hover {
  text-decoration: underline;
  border-bottom-color: rgba(0,0,0,.2);
}

.footnotes {
  margin-top: 2.4em;
}

.footer {
  max-width: 80%;
  margin: 0 auto;
  padding: 1em 1em 0.7em 1em;
  text-align: center;
  font-family: ui-monospace, system-ui-monospace, monospace;
}

.footer-links {
  list-style: none;
  margin: 0;
  padding: 0;
  color: #ccc;
  font-size: 0.8em;
}

.footer-links li {
  margin: 0;
  padding: 0;
  display: inline-block;
}

.footer-links a {
  color: #aaa;
  text-decoration: none;
  transition: color 150ms ease;
  margin: 0;
  font-size: 0.8em;
}

.footer-links a:hover,
.footer-links a:focus {
  color: #444;
}

.footer-links li::before {
  content: '/';
  position: relative;
  left: -2px;
}

.footer-links li:first-child::before {
  display: none;
}

.footer-links-kudos img {
  position: relative;
  top: 6px;
  margin-left: 2px;
}

@media screen {
    h5,
    .article-title,
    .archive-item-link {
      font-family: /* 'Crimson Text', */
                    'Helvetica Neue',
                    'Playfair Display',
                    'Garamond',
                    system-ui-serif,
                    ui-serif,
                    -apple-system-ui-serif,
                    serif;
    }

    h5 {
      font-style: italic;
      font-size: 1.275em;
    }
    .article-date,
    .article-duration,
    .article-tags,
    .archive-title,
    .archive-item-date  {
      font-family: 'Raleway', ui-monospace, system-ui-monospace, monospace;
      letter-spacing: 0.1em;
      text-transform: uppercase;
    }

    .article-duration {
      margin-top: 0px;
      float: right;
      padding: 1px 1em;
      border-radius: 3px;
      font-size: 0.67em;
      font-weight: normal;
      background-color: rgba(0,0,0, .05);
      color: rgba(0,0,0, .72);
    }

    .archive-item-link {
      font-size: 2em;
    }

    .archive .archive-item-link {
      font-size: 1.5em;
    }

    .archive .archive-item-date {
      font-size: 1em;
    }

}
@media (min-width: 600px) {
    .header {
      padding: 1em 0 0.3em 0;
    }

    .nav-logo {
      padding: 0;
      margin: -13px 0 0 0;
    }

    .nav-logo img {
      max-height: 10px;
    }

    .nav-links {
      font-size: 1em;
    }

    .nav-links li {
      margin: 0 0 0 1em;
    }

    .content {
      margin: 3.6em auto 5em auto;
    }

    .article-title {
      font-size: 2.5em;
    }

    .article-duration {
      font-size: 0.75em;
    }

    .footer-links {
      font-size: 0.85em;
    }

    .archive {
      text-align: left;
    }

    .archive-title {
      font-size: 2em;
      font-weight: 400;
    }

    .archive-item-date {
      font-size: 1.28em;
      font-style: normal;
    }
}

@media (max-width: 600px) {
    .content {
      margin: 1.6em 0 3em 0;
    }
}

